Static analysis inspection fixes